Fixed the build process.